<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:padding="16dp"
    tools:context=".SecondActivity">

    <ImageView
        android:id="@+id/question_image"
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:clipToOutline="true"
        android:contentDescription="@string/question_image_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/sin_t_tulo_2" />


    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/activity_second_text_0"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rg_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_second_text_1"
            android:textColor="@color/primaryTextColor" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_second_text_2"
            android:textColor="@color/primaryTextColor" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_second_text_3"
        android:layout_marginTop="16dp"
        app:cornerRadius="16dp"
        app:backgroundTint="@color/buttonColor" />
</LinearLayout>
